...
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.711" />

    <Button
        android:id="@+id/button6"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:onClick="appointmentHistory"
        android:text="@string/button_apptHist"
...
